tree-sitter-jsp/test/corpus/basic.txt
================================================================================
Scriptlet
================================================================================

<% out.println("Hello"); %>

--------------------------------------------------------------------------------

(template
  (content)
  (scriptlet
    (code))
  (content))

================================================================================
Expression
================================================================================

<%= request.getParameter("name") %>

--------------------------------------------------------------------------------

(template
  (content)
  (expression
    (code))
  (content))

================================================================================
Declaration
================================================================================

<%! private static final int MAX = 100; %>

--------------------------------------------------------------------------------

(template
  (content)
  (declaration
    (code))
  (content))

================================================================================
Directive
================================================================================

<%@ page language="java" contentType="text/html" %>

--------------------------------------------------------------------------------

(template
  (content)
  (directive
    (directive_attribute))
  (content))

================================================================================
Comment
================================================================================

<%-- This is a JSP comment --%>

--------------------------------------------------------------------------------

(template
  (content)
  (comment)
  (content))

================================================================================
EL expression with dollar
================================================================================

Hello ${user.name}!

--------------------------------------------------------------------------------

(template
  (content)
  (el_expression
    (el_content))
  (content))

================================================================================
EL expression with hash
================================================================================

<p>#{item.value}</p>

--------------------------------------------------------------------------------

(template
  (content)
  (el_expression
    (el_content))
  (content))

================================================================================
Mixed JSP page
================================================================================

<%@ page language="java" %>
<html>
<body>
<%-- greeting --%>
<h1>${title}</h1>
<% for (String s : list) { %>
<p><%= s %></p>
<% } %>
</body>
</html>

--------------------------------------------------------------------------------

(template
  (content)
  (directive
    (directive_attribute))
  (content)
  (comment)
  (content)
  (el_expression
    (el_content))
  (content)
  (scriptlet
    (code))
  (content)
  (expression
    (code))
  (content)
  (scriptlet
    (code))
  (content))
